update zeroP link

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     
     <hr>
 
-    <p class="center">Also check out <a href="https://github.com/EthGambler/ZeroP">Zero Ponzi</a> the first Ethereum doubler with 0% fees</p>
+    <p class="center">Also check out <a href="http://ethgambler.github.io/ZeroP/">Zero Ponzi</a> the first Ethereum doubler with 0% fees</p>
     
         <div class="panel panel-default" style="display: none;">
           <div class="panel-heading clearfix">
