--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://etherscan.io/address/0x3d5894B6801221Bf296a2aC2D6cCF5EA09cE399A#code" target="_blank"><strong>View Contract Source Code</strong></a></li>
+            <li><a href="https://www.etherchain.org/account/0x3d5894B6801221Bf296a2aC2D6cCF5EA09cE399A" target="_blank"><strong>View Contract Source Code</strong></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
